--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,12 @@
+
 spring:
   datasource:
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
     url: jdbc:sqlserver://127.0.0.1:1433;DatabaseName=FamilyFinance
     username: sa
     password: lzheng
-
+server:
+  port: 8081
 
 mybatis:
   mapper-locations: classpath*:mapper/*.xml
